--- a/DevelopmentProject/app/src/main/res/drawable/checkbox_checked_layer.xml
+++ b/DevelopmentProject/app/src/main/res/drawable/checkbox_checked_layer.xml
@@ -5,7 +5,9 @@
         <shape
             android:shape="rectangle">
             <size android:width="24dp" android:height="24dp"/>
-            <solid android:color="@color/black"/>
+            <solid android:color="@android:color/transparent"/>
+            <stroke android:color="@color/blackGray" android:width="2dp"></stroke>
+            <corners android:radius="6dp"></corners>
         </shape>
     </item>
 
@@ -19,7 +21,7 @@
             android:shape="rectangle"
             >
             <size android:width="24dp" android:height="24dp"></size>
-            <solid android:color="@color/white"></solid>
+            <solid android:color="@android:color/transparent"></solid>
         </shape>
     </item>
 
@@ -33,8 +35,14 @@
             android:shape="rectangle"
             >
             <size android:width="24dp" android:height="24dp"></size>
-            <solid android:color="@color/black"></solid>
+            <solid android:color="@color/blackGray"></solid>
+            <corners android:radius="6dp"></corners>
         </shape>
     </item>
-    <item android:drawable="@drawable/ic_checked_white" android:gravity="center"/>
+
+
+    <item
+        android:id="@+id/layer_tick"
+        android:drawable="@drawable/avd_checkbox_check"
+        android:gravity="center"/>
 </layer-list>
