--- a/DevelopmentProject/app/src/main/res/drawable/checkbox_selector.xml
+++ b/DevelopmentProject/app/src/main/res/drawable/checkbox_selector.xml
@@ -1,10 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- checked = true -->
-    <item android:state_checked="true"
-        android:drawable="@drawable/checkbox_checked"/>
-    <!-- checked = false -->
-    <item android:state_checked="false"
+<animated-selector xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item
+        android:id="@+id/state_unchecked"
         android:drawable="@drawable/checkbox_unchecked"/>
-</selector>
+
+    <item
+        android:id="@+id/state_checked"
+        android:state_checked="true"
+        android:drawable="@drawable/avd_checkbox_check"/>
+
+    <transition
+        android:fromId="@id/state_unchecked"
+        android:toId="@id/state_checked"
+        android:drawable="@drawable/avd_checkbox_check" />
+
+    <transition
+        android:fromId="@id/state_checked"
+        android:toId="@id/state_unchecked"
+        android:drawable="@drawable/checkbox_unchecked" />
+
+</animated-selector>
+
 
