--- a/DevelopmentProject/app/src/main/res/drawable/checkbox_unchecked.xml
+++ b/DevelopmentProject/app/src/main/res/drawable/checkbox_unchecked.xml
@@ -6,7 +6,9 @@
             <shape
                 android:shape="rectangle">
                 <size android:width="24dp" android:height="24dp"/>
-                <solid android:color="@color/black"/>
+                <solid android:color="@android:color/transparent"/>
+                <stroke android:color="@color/blackGray" android:width="2dp"></stroke>
+                <corners android:radius="6dp"></corners>
             </shape>
         </item>
 
@@ -20,7 +22,8 @@
                 android:shape="rectangle"
                 >
                 <size android:width="24dp" android:height="24dp"></size>
-                <solid android:color="@color/white"></solid>
+                <solid android:color="@android:color/transparent"></solid>
+
             </shape>
         </item>
 
@@ -34,7 +37,8 @@
                 android:shape="rectangle"
                 >
                 <size android:width="24dp" android:height="24dp"></size>
-                <solid android:color="@color/black"></solid>
+                <solid android:color="@color/blackGray"></solid>
+                <corners android:radius="6dp"></corners>
             </shape>
         </item>
     </layer-list>
