--- a/DevelopmentProject/app/src/main/res/layout/fragment_page1.xml
+++ b/DevelopmentProject/app/src/main/res/layout/fragment_page1.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Page1Fragment">
+    tools:context=".Page1Fragment"
+    android:background="@color/gray"
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -18,9 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="aaaaaaaaaaaaaa"
-            app:buttonCompat="@drawable/checkbox_selector"
-            android:buttonTint="@null"
-            app:buttonTint="@null"
+            app:buttonCompat="@null"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
